# Peekaboo

./: .envrc  .eslintrc.json  .gitignore  .gitmodules  .npmignore  .swiftformat  .swiftlint-ci.yml  .swiftlint.yml  .watchmanconfig  AGENTS.md  AGENT_IMPLEMENTATION_SUMMARY.md  AGENT_TOOLS_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CROSS_PLATFORM_SETUP.md  FEATURE_PARITY_AUDIT.md  MIGRATION_COMPLETE.md  Package.swift  README-poltergeist.md  README.md  RELEASE_NOTES_BETA19.md  RELEASING.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_PLAN.md  TACHIKOMA_UI_MIGRATION.md  VISION_AGENT_SUMMARY.md  agent-demo.sh  appcast.xml  calculator-agent-test-results.md  calculator-label-improvement-summary.md  debug  debug-agent-tools.swift  demo-agent.swift  grok.md  info  inspector-debugging.md  integration-test.sh  jest.config.cjs  manual-test-v3.sh  (+56 more)
.claude/: settings.local.json
.claude/hooks/: pre_bash.py
.cursor/rules/: agent.mdc
.cursor/scripts/: peekaboo.scpt
.github/workflows/: ci-namespace.yml  ci.yml  commander-multiplatform.yml  cross-platform-build.yml  cross-platform-ci.yml  macos-ci.yml  pages.yml  release.yml  update-homebrew.yml
.poltergeist-state/: Peekaboo-907edb38-AXorcist.state  Peekaboo-907edb38-Commander.state  Peekaboo-907edb38-Inspector.app.state  Peekaboo-907edb38-Peekaboo.app.state  Peekaboo-907edb38-Peekaboo.state  Peekaboo-907edb38-Playground.app.state  Peekaboo-907edb38-Tachikoma.state  Peekaboo-907edb38-TauTUI.state  Peekaboo-907edb38-daemon.json
AXorcist/: .swiftlint.yml  Package.swift  README.md
Apps/CLI/: .swiftformat  .swiftlint.yml  CHANGELOG.md  Package.swift  info  test-textedit-agent.sh  test_interface.swift
Apps/Mac/: ANIMATED_ICONS_SUMMARY.md  MODERNIZATION_SUMMARY.md  Package.resolved  Package.swift  TOOL_DISPLAY_UPDATE.md  run-tests.sh
Apps/Peekaboo.xcworkspace/: contents.xcworkspacedata
Apps/PeekabooInspector/: Package.swift
Apps/Playground/: PLAYGROUND_TEST.md  Package.swift  README.md
Commander/: .swiftlint.yml  Package.resolved  Package.swift  README.md
Commander/.build/: build.db  plugin-tools.yaml
Commander/docs/: multiplatform.md
Core/AXorcist/: .gitignore  .swiftformat  .swiftlint.yml  Makefile  Package.swift  README.md  run_axorc_with_json_content.sh
Core/PeekabooAutomationKit/: Package.swift
Core/PeekabooCore/: CLI_MIGRATION_STATUS.md  (+3 more)
Examples/: Package.swift  README.md  test_basic_api.swift
PeekabooCore/: Package.swift
PeekabooMac/: gui_progress.md  spec.md
Playground/: Package.swift
Server/: .eslintrc.json  .gitignore  .prettierrc.json  README.md  SETUP_INSTRUCTIONS.md  biome.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
docs/: ARCHITECTURE.md  AppKit-Implementing-Liquid-Glass-Design.md  MCP.md  README.md  RELEASING.md  SwiftUI-Implementing-Liquid-Glass-Design.md  SwiftUI-New-Toolbar-Features.md  TODO.md  agent-bridge-troubleshooting.md  agent-chat.md  agent-patterns.md  agent-skill.md  annotation-coordinate-fix-tests.md  anthropic-examples.md  anthropic-verification-report.md  anthropic.md  application-resolving.md  argument-parser.md  audio.md  automation.md  bridge-host.md  browser-mcp.md  building.md  capture.md  claude-hooks.md  cli-command-reference.md  clipboard.md  commander.md  concurrency.md  configuration.md  cross-platform-architecture.md  daemon.md  engine.md  error-handling-guide.md  focus-impl.md  focus.md  grok.md  homebrew-setup.md  human-mouse-move.md  human-typing.md  (+69 more)
examples/: README.md  calculator-demo.peekaboo.json  safari-search.peekaboo.json  test-peekaboo.js  text-editor-demo.peekaboo.json  textedit-demo.peekaboo.json
homebrew/: peekaboo.rb
peekaboo-cli/: .gitignore  .swiftformat  .swiftlint.yml  AXorcist-Enhancement-PR.md  AXorcist-Enhancements-Summary.md  ApplicationFinder.bc  Argument.bc  ArgumentDecoder.bc  ArgumentDefinition.bc  ArgumentHelp.bc  ArgumentSet.bc  ArgumentVisibility.bc  AsyncParsableCommand.bc  BashCompletionsGenerator.bc  CHANGELOG.md  CollectionExtensions.bc  CommandConfiguration.bc  CommandGroup.bc  CommandParser.bc  CompletionKind.bc  CompletionsGenerator.bc  DumpHelpGenerator.bc  EnumerableFlag.bc  Errors.bc  ExpressibleByArgument.bc  FishCompletionsGenerator.bc  Flag.bc  HelpCommand.bc  HelpGenerator.bc  ImageCommand.bc  InputKey.bc  InputOrigin.bc  JSONOutput.bc  ListCommand.bc  Logger.bc  MessageInfo.bc  Models.bc  Name.bc  NameSpecification.bc  Option.bc  (+20 more)
peekaboo-linux/: .gitignore  Cargo.toml
peekaboo-linux/src/: application_finder.rs  cli.rs  errors.rs  logger.rs  main.rs  models.rs  permissions.rs  screen_capture.rs
peekaboo-native/: Cargo.toml  build.rs
peekaboo-native/src/: application_finder.rs  cli.rs  environment.rs  errors.rs  json_output.rs  lib.rs  main.rs  models.rs  permissions.rs  traits.rs  window_manager.rs
peekaboo-native/src/commands/: image.rs  list.rs  mod.rs
peekaboo-native/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
peekaboo-native/src/utils/: file_utils.rs  mod.rs
peekaboo-native/tests/: integration_tests.rs  unit_tests.rs
release/: release-notes.md
scripts/: .swiftlint.yml  README-pblog.md  README-vtlog.md  build-cli-standalone.sh  build-docs-site.mjs  build-mac-debug.sh  build-menubar-helper.sh  build-peekaboo-cli.sh  build-swift-arm.sh  build-swift-cli.sh  build-swift-debug.sh  build-swift-universal.sh  compile_and_run.sh  docs-lint.mjs  docs-list.mjs  docs-site-assets.mjs  git-policy.ts  install-claude-desktop.sh  install.ps1  install.sh  mcp-playwright.sh  menu-dialog-soak.sh  pblog.sh  peekaboo-logs.sh  peekaboo-wait.sh  peekaboo-wait.sh.original  playground-log.sh  playwright-mcp-notty.sh  playwright-mcp.js  playwright-mcp.sh  playwright-server  poltergeist  poltergeist-debug.sh  poltergeist-handler.sh  poltergeist-switch.sh  poltergeist-wrapper.sh  poltergeist.sh  prepare-release.js  release-binaries.sh  release-macos-app.sh  (+16 more)
src/: index.ts
test-results/: test-ai-analysis.sh  test-capture-modes.sh  test-config.sh  test-listing.sh  test-performance.sh
tests/: README.md  TEST_CATEGORIZATION_PLAN.md  peekaboo-mcp-wrapper.test.mjs  setup.ts
(+2742 files in other folders)
