[package]
name = "peekaboo-linux"
version = "1.0.0-beta.18"
edition = "2021"
description = "Linux screen capture and window management utility for Peekaboo MCP"
license = "MIT"
authors = ["Peter Steinberger <steipete@gmail.com>"]
repository = "https://github.com/steipete/peekaboo"

[[bin]]
name = "peekaboo"
path = "src/main.rs"

[dependencies]
# CLI argument parsing - matches Swift ArgumentParser functionality
clap = { version = "4.4", features = ["derive", "color", "help", "usage", "error-context"] }

# JSON serialization - for compatibility with Swift JSON output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Screen capture libraries for Linux
screenshots = "0.8"  # Cross-platform screenshot library
image = { version = "0.24", features = ["png", "jpeg"] }

# X11 support for window management
x11rb = { version = "0.13", features = ["all-extensions"] }

# Wayland support (optional, for future Wayland-native support)
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.31", optional = true }

# System information for process discovery
sysinfo = "0.35"

# System information and process management
procfs = "0.16"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Date/time formatting to match Swift DateFormatter
chrono = { version = "0.4", features = ["serde"] }

# File system operations
tempfile = "3.8"
dirs = "5.0"

# String similarity for fuzzy application matching
strsim = "0.10"

# Regular expressions for parsing
regex = "1.10"

# System calls for user ID and permissions
libc = "0.2"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Lazy static for global state
lazy_static = "1.4"

[features]
default = ["x11"]
x11 = []
wayland = ["wayland-client", "wayland-protocols"]

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
