[package]
name = "peekaboo"
version = "1.0.0-beta.18"
edition = "2021"
description = "Cross-platform screen capture and window management utility for Peekaboo MCP"
license = "MIT"
authors = ["Peter Steinberger <steipete@gmail.com>"]
repository = "https://github.com/steipete/peekaboo"

[[bin]]
name = "peekaboo"
path = "src/main.rs"

[dependencies]
# CLI argument parsing - matches Swift ArgumentParser functionality
clap = { version = "4.4", features = ["derive", "color", "help", "usage", "error-context"] }

# JSON serialization - for compatibility with Swift JSON output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cross-platform screen capture
screenshots = "0.8"  # Works on Linux, Windows, and macOS
image = { version = "0.24", features = ["png", "jpeg"] }

# System information for process discovery (cross-platform)
sysinfo = "0.35"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Date/time formatting to match Swift DateFormatter
chrono = { version = "0.4", features = ["serde"] }

# File system operations
tempfile = "3.8"
dirs = "5.0"

# String similarity for fuzzy application matching
strsim = "0.10"

# Regular expressions for parsing
regex = "1.10"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Lazy static for global state
lazy_static = "1.4"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
# Unix-specific dependencies (Linux, macOS)
libc = "0.2"
procfs = "0.16"  # Linux-specific process info

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific window management
x11rb = { version = "0.13", features = ["all-extensions"], optional = true }
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.31", optional = true }

[target.'cfg(windows)'.dependencies]
# Windows-specific dependencies
winapi = { version = "0.3", features = [
    "winuser", "processthreadsapi", "psapi", "tlhelp32", 
    "handleapi", "errhandlingapi", "winnt", "winerror"
] }
windows = { version = "0.52", features = [
    "Win32_Foundation", "Win32_System_ProcessStatus", 
    "Win32_System_Threading", "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi", "Win32_System_Diagnostics_ToolHelp"
] }

[features]
default = []
x11 = ["x11rb"]
wayland = ["wayland-client", "wayland-protocols"]

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

